--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse ml-auto" id="mobile-menu">
-                    <ul class="navbar-nav justify-content-end mr-auto mt-2 mt-lg-0">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
@@ -36,12 +36,12 @@
           </div> 
        </div>
         <section class="services">
-            <div class="container">
+            <div class="container text-center my-3">
                <h2>Services</h2>
                <p>Fusce et tempor tellus, viverra ornare nibh.</p>
                 <div class="row">    
                     <div class="col-lg-4">              
-                        <div class="card card-services">
+                        <div class="card border-0">
                             <div class="card-body">
                                 <i class="fas fa-home"></i>
                                 <h5 class="card-title">E-Commerce</h5>
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">              
-                        <div class="card card-services">
+                        <div class="card border-0">
                             <div class="card-body">
                                 <i class="fas fa-home"></i>
                                 <h5 class="card-title">Responsive Web</h5>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">              
-                        <div class="card card-services">
+                        <div class="card border-0">
                             <div class="card-body">
                                 <i class="fas fa-home"></i>
                                 <h5 class="card-title">Web security</h5>
@@ -71,7 +71,7 @@
             </div>
         </section>
         <section>
-            <div class="container">
+            <div class="container text-center my-3">
               <h2>Our Portfolio</h2>
               <p>Fusce et tempor tellus, viverra ornare nibh.</p>
                <div class="row">
