--- a/index.html
+++ b/index.html
@@ -120,15 +120,19 @@
         </section>
         <footer>
             <div class="container">
-               <h3>Blue Sky</h3>
                 <div class="footer">
-                    <ul>
-                        <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-                        <li><a href=#><i class="fab fa-google-plus-square"></i>Google</a></li>
-                    </ul>
-                </div>
+                    <div class="footer-left">
+                       <h3>Blue Sky</h3>
+                    </div>   
+                    <div class="footer-list">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+                            <li><a href=#><i class="fab fa-google-plus-square"></i>Google</a></li>
+                        </ul>
+                    </div>
+                </div>            
             </div>
         </footer>
     </body>
