--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blue Sky</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap&subset=latin-ext" rel="stylesheet">   <link rel="stylesheet" href="css/style.css"> 
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap&subset=latin-ext" rel="stylesheet">   
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css"> 
     </head>
     <body>
         <header class="splash">
             <div class="container">
-                <nav class="navigation">
-                    <div class="left">
-                        <h3>Blue Sky</h3>
-                    </div>
-                    <div class="list">
-                        <ul>
-                            <li><a href=#>Home</a></li>
-                            <li><a href=#>Services</a></li>
-                            <li><a href=#>Portfolio</a></li>
-                            <li><a href=#>About</a></li>
-                            <li><a href=#>Contact</a></li>
+                <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+                    <a class="navbar-brand" href="#">Blue sky</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse ml-auto" id="mobile-menu">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                         </ul>
                     </div>
-                </nav>
-            </div>
-            <div class="splash-inner">
-                <h1 class="page-title">Welcome to Our Studio!</h1>
-                <h2 class="sub-title">IT'S NICE TO MEET YOU</h2>
-                <a href="#" class="btn">Learn more</a>
+                 </nav>
+                <div class="splash-inner">
+                    <h3 class="page-title">Welcome to Our Studio!</h3>
+                    <h1 class="sub-title">IT'S NICE TO MEET YOU</h1>
+                    <a href="#" class="btn">Learn more</a>
+                </div>
             </div>
         </header>
         <section class="services">
@@ -61,10 +64,10 @@
                 <div class="portfolio-row">
                    <div class="port-box">
                        <div class="box-image">
-                           <img src="images/apple.jpg">
+                           <img src="images/desk.jpg">
                        </div>
                        <div class="port-description">
-                           <h5>Ebony & Ivory</h5>
+                           <h4>Ebony & Ivory</h4>
                            <p>Branding</p>
                        </div>
                    </div>
@@ -73,16 +76,16 @@
                            <img src="images/notes.jpg">
                        </div>
                        <div class="port-description">
-                           <h5>Smart Stationary</h5>
+                           <h4>Smart Stationary</h4>
                            <p>Print Disign</p>
                        </div>
                    </div>
                    <div class="port-box">
                        <div class="box-image">
-                           <img src="images/poster.jpg">
+                           <img src="images/posters.jpg">
                        </div>
                        <div class="port-description">
-                           <h5>Clever Poster</h5>
+                           <h4>Clever Poster</h4>
                            <p>Print disign</p>
                        </div>
                    </div>
@@ -93,7 +96,7 @@
                            <img src="images/vinyl.jpg">
                        </div>
                        <div class="port-description">
-                           <h5>Vinyl record</h5>
+                           <h4>Vinyl record</h4>
                            <p>Product Moke-up</p>
                        </div>
                    </div>
@@ -102,16 +105,16 @@
                            <img src="images/website.jpg">
                        </div>
                        <div class="port-description">
-                           <h5>Treehouse template</h5>
+                           <h4>Treehouse template</h4>
                            <p>Web Disign</p>
                        </div>
                    </div>
                    <div class="port-box">
                        <div class="box-image">
-                           <img src="images/logo.jpg">
+                           <img src="images/logo2.jpg">
                        </div>
                        <div class="port-description">
-                           <h5>Burned logo</h5>
+                           <h4>Burned logo</h4>
                            <p>Branding</p>
                        </div>
                    </div>
